codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_config_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Subagent Configuration
  Choose how Codex keeps exploration out of the main context.

  1. Prefer          Proactively use explorer subagents to keep repository
                     context lean.
› 2. Auto (current)  Use explorer subagents for large or multi-topic
                     discovery.
  3. Less            Only use explorer subagents when the request clearly asks
                     for them.
  4. Disable         Do not proactively use explorer subagents for codebase
                     discovery.

  Press enter to confirm or esc to go back
