codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 291
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Codex Working · 0s · esc interrupt · 1 active · 1 background terminal running…"
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.4 default · /tmp/project                                                "
