codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
[>_<] Waiting for background terminal (0s • esc…
  └ cargo test -p codex-core -- --exact…


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
